# mic-audio-rack

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp  main_component.cpp  main_component.h  plugin_host.cpp  plugin_host.h
src/processors/: base_processor.h  gain_processor.h
src/ui/: plugin_chain.h  plugin_window.h
